# ZKnn

./: .gitignore  CMakeLists.txt  README.md
ZKnn/: ZKnn.sln
ZKnn/ZKnn/: CInputLayer.cpp  CInputLayer.h  CLayer.cpp  CLayer.h  CMnistNet.cpp  CMnistNet.h  CNetwork.cpp  CNetwork.h  CNeuron.cpp  CNeuron.h  COutputLayer.cpp  COutputLayer.h  CPerceptron.cpp  CPerceptron.h  CSigmoidNeuron.cpp  CSigmoidNeuron.h  Common.cpp  Common.h  InterFuncs.cpp  InterFuncs.h  Layer.cpp  Layer.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  ZKnn.vcxproj  ZKnn.vcxproj.filters  main.cpp
ZKnn/scripts/: convert-mnist-to-image.py  train_labs.txt
cpp/: CMakeLists.txt
cpp/checklicense/: CMakeLists.txt  EMPCInterface.h  EMPMacros.h  EMPStructs_c.h  checklicense.cpp
cpp/createlicensecode/: CMakeLists.txt  MD5.cpp  MD5.h  MakeLicenseDll.h  createlicensecode.cpp  makelicense.cpp
cpp/getmachinecode/: CMakeLists.txt  getmachinecode.cpp
cpp/lenet5/: CMakeLists.txt  lenet5.cpp
cpp/linearmodel/: CMakeLists.txt
cpp/mnist-cnn/: CMakeLists.txt  mnist-cnn.cpp
cpp/nonlinearmodel/: CMakeLists.txt  nonlinearmodel.cpp
cpp/tensorflow_cc/mnist/: CMakeLists.txt  mnist.cpp
cpp/torchdemo/: CMakeLists.txt  torchdemo.cpp
cpp/u2net/: CMakeLists.txt  u2net.cpp
model/: lenet5-cnn.mnn  lenet5-cnn.onnx  lenet5-cnn.pkl  nonlinear.mnn  nonlinear.onnx  nonlinear.pkl
scripts/d2l/: linear-regression-scratch.py  linear_regression_gluon.py  linear_regression_gluon_load_parameters.py  softmax_gluon.py  softmax_gluon_cpu.py  softmax_scratch.py  test
scripts/python/: recognize_mnist.py  recognize_mnist_convolutional.py
scripts/python/c1/: decodemnisttoimage.py
scripts/python/c2/: cifar10toimage.py  extractcifar10.py
scripts/tensor/: convert_h5_pb.py  tensorflow_mnist.py
scripts/torch_/: learn_torch_nn-1.py  linear.onnx  linear_model.py  linearmodel.pkl  loadmodelfile.py
scripts/torch_/convert_numpy_tensor/: convert_numpy_tensor.py  tensor-device.py
scripts/torch_/learn-torch/: check-cuda.py  check-pytorch-version.py  create_tensor_from_python_list.py  show_tensor_by_cv2.py  tensor-device.py  tensor-interface.py  tensor_cpu_gpu.py
scripts/torch_/lenet5/: test.py  train.py
scripts/torch_/lenet5/model/: ZKMnistDataset.py  lenet5.py
scripts/torch_/mnist/: eval.py  train.py
scripts/torch_/mnist/model/: ZKMnistModel.py
scripts/torch_/nonlinearModel/: loadmodelfile.py  nonlinear.onnx  nonlinearModel.py  nonlinearmodel.pkl  viewmodel.py
tools/: MNNConvert  nonlinear.mnn
